[package]
name = "adapt-webclient"
version = "0.1.0"
description = "A Tauri App"
authors = ["jay3332", "Cryptex"]
license = "AGPL-3.0"
repository = "https://github.com/AdaptChat/webclient"
# default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# devtools feature should be disabled in the future once everything stabilized
tauri = { version = "1.2", features = ["devtools"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
